@@ -4,10 +4,10 @@
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
  *          http://license.coscl.org.cn/MulanPSL2
- * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
+ * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  * See the Mulan PSL v2 for more details.
  */
-
 package com.tny.game.common.event;
 
 import com.tny.game.common.event.bus.*;
@@ -42,11 +42,11 @@ public class EventFirerDispatcherTest {
     /**
      * @uml.property name="listener"
      */
-    private TestListener listener = new TestListener() {
+    private final TestListener listener = new TestListener() {
 
         @SuppressWarnings("unused")
         public void handleTaskEvent(TaskEvent event) {
-            assertEquals(new Integer(1), event.getSource());
+            assertEquals(Integer.valueOf(1), event.getSource());
         }
 
     };
