@@ -4,10 +4,10 @@
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
  *          http://license.coscl.org.cn/MulanPSL2
- * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
+ * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  * See the Mulan PSL v2 for more details.
  */
-
 package com.tny.game.oplog;
 
 import com.fasterxml.jackson.databind.jsontype.NamedType;
@@ -48,7 +48,7 @@ public class OpLogSnapshotLoader {
                 if (Snapshot.class.isAssignableFrom(cl)) {
                     Snapshot snapshot;
                     try {
-                        snapshot = (Snapshot)cl.newInstance();
+                        snapshot = (Snapshot)cl.getDeclaredConstructor().newInstance();
                         OpLogMapper.getMapper().registerSubtypes(new NamedType(cl, snapshot.getType().toString()));
                     } catch (Throwable e) {
                         LOGGER.error("", e);
