@@ -4,10 +4,10 @@
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
  *          http://license.coscl.org.cn/MulanPSL2
- * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
+ * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
  * See the Mulan PSL v2 for more details.
  */
-
 package com.tny.game.protoex.field.runtime;
 
 import com.tny.game.protoex.*;
@@ -38,7 +38,7 @@ public class CollectionCreator {
             throw new IllegalArgumentException(format("{}无法找到对应的Collection", clazz));
         } else {
             try {
-                return (Map<K, V>)clazz.newInstance();
+                return (Map<K, V>)clazz.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw ProtobufExException.causeBy(e);
             }
@@ -66,7 +66,7 @@ public class CollectionCreator {
                 return new ArrayList<>();
             }
             try {
-                return (Collection<T>)clazz.newInstance();
+                return (Collection<T>)clazz.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw ProtobufExException.causeBy(e);
             }
